pictor (2.23) unreleased; urgency=low

  * UNRELEASED

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 05 Jan 2013 11:09:36 -0600

pictor (2.22-0ubuntu1) raring; urgency=low

  * index.php:
    - auto resize image to the size of browser window, using javascript

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 05 Jan 2013 11:09:34 -0600

pictor (2.21-0ubuntu1) raring; urgency=low

  * debian/control:
    - fix lintian warnings

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 31 Oct 2012 17:30:10 +0100

pictor (2.20-0ubuntu1) raring; urgency=low

  * index.php:
    - ensure error message is visible

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 31 Oct 2012 17:14:48 +0100

pictor (2.19-0ubuntu1) precise; urgency=low

  * index.php:
    - fix some whitespace
    - deprecate $EDIT editing descriptions
      + this never worked terribly well, and required www-data have
        write permissions on the file, which was messy
    - move the has_subdir() functionality to actually test if a directory
      has images; this is much more efficient, as a directory that has
      1000 files would have to scan all of those to see if any of those
      was a subdirectory; instead, just see if any one of those is an
      image, and if so, we'll assume its an album
      + LP: #952588
    - fix a broken reference to $url, should be $href
    - use isset() to test the existence of various variables and keys
      + LP: #952587
      + this should clean up a LOT of noise in /var/log/apache2/error
        and improve performance
      + define a couple of variables to prevent errors in apache logs

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sun, 11 Mar 2012 17:23:29 -0500

pictor (2.18-0ubuntu1) precise; urgency=low

  * index.php: LP: #952186
    - split is_image() to a fast version that doesn't read exif data;
      use this one when processing multiple files (thumbnails view)

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sun, 11 Mar 2012 07:10:37 -0500
